--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -11,7 +11,7 @@
     <link rel="shortcut icon" href="~/Content/assets/images/favicon.ico">
 
     <!-- jsvectormap css -->
-    <link href="~/Content/assets/libs/jsvectormap/jsvectormap.min.css" rel="stylesheet" type="text/css" />
+    @*<link href="~/Content/assets/libs/jsvectormap/jsvectormap.min.css" rel="stylesheet" type="text/css" />*@
 
     <!--Swiper slider css-->
     <link href="~/Content/assets/libs/swiper/swiper-bundle.min.css" rel="stylesheet" type="text/css" />
@@ -130,14 +130,14 @@
     <script src="~/Content/assets/libs/node-waves/waves.min.js"></script>
     <script src="~/Content/assets/libs/feather-icons/feather.min.js"></script>
     <script src="~/Content/assets/js/pages/plugins/lord-icon-2.1.0.js"></script>
-    <script src="~/Content/assets/js/plugins.js"></script>
+    @*<script src="~/Content/assets/js/plugins.js"></script>*@
 
     <!-- apexcharts -->
     <script src="~/Content/assets/libs/apexcharts/apexcharts.min.js"></script>
 
     <!-- Vector map-->
-    <script src="~/Content/assets/libs/jsvectormap/jsvectormap.min.js"></script>
-    <script src="~/Content/assets/libs/jsvectormap/maps/world-merc.js"></script>
+    @*<script src="~/Content/assets/libs/jsvectormap/jsvectormap.min.js"></script>*@
+    @*<script src="~/Content/assets/libs/jsvectormap/maps/world-merc.js"></script>*@
 
     <!--Swiper slider js-->
     <script src="~/Content/assets/libs/swiper/swiper-bundle.min.js"></script>
