--- a/Views/Dashboard/DashboardHeaderPartial.cshtml
+++ b/Views/Dashboard/DashboardHeaderPartial.cshtml
@@ -33,7 +33,7 @@
             <div class="d-flex align-items-end justify-content-between mt-4">
                 <div>
                     <h4 class="fs-20 fw-semibold ff-secondary mb-4">
-                        ৳<span class="counter-value" data-target="0">@ViewBag.dataTable.Rows[0]["MTD_SALES_AMT"]</span>
+                        <span class="counter-value" data-target="0">@ViewBag.dataTable.Rows[0]["MTD_SALES_AMT"]</span>
                     </h4>
                     <a href="~/SalesReport/SalesReport" class="text-decoration-underline" target="_blank">
                         View sales report
@@ -124,7 +124,7 @@
             <div class="d-flex align-items-center">
                 <div class="flex-grow-1 overflow-hidden">
                     <p class="text-uppercase fw-medium text-muted text-truncate mb-0">
-                        Last Month Sales
+                        Last Month Sales (In Lac)
                     </p>
                 </div>
                 @*<div class="flex-shrink-0">
@@ -136,7 +136,7 @@
             <div class="d-flex align-items-end justify-content-between mt-4">
                 <div>
                     <h4 class="fs-20 fw-semibold ff-secondary mb-4">
-                        ৳<span class="counter-value" data-target="39600">@ViewBag.dataTable.Rows[0]["LAST_MTD_SALES_AMT"]</span>
+                        <span class="counter-value" data-target="39600">@ViewBag.dataTable.Rows[0]["LAST_MTD_SALES_AMT"]</span>
                     </h4>
                     <a href="~/SalesReport/SalesReportMOM" class="text-decoration-underline" target="_blank">Compare with previous</a>
                 </div>
