some minor correction

--- a/Views/Dashboard/FocusKpiPartial.cshtml
+++ b/Views/Dashboard/FocusKpiPartial.cshtml
@@ -48,7 +48,7 @@
             {
                 <tr class="table-info">
                     <td colspan="7">
-                        <a href="#" class="fw-medium text-reset">@currentKeyArea</a>
+                        <span class="fw-medium text-reset p-0 m-0">@currentKeyArea</span>
                     </td>
                 </tr>
 
